chore: add hosting config for Railway and Vercel
- Backend port now reads from PORT env variable (Railway requirement)
- CORS allowed origins configurable via CORS_ALLOWED_ORIGINS env var
- Added railway.toml for Railway backend deployment
- Added frontend/vercel.json for Angular SPA routing on Vercel
- Added environment.prod.ts (Railway URL to be filled after deploy)
- Added fileReplacements in angular.json for production build

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>